css/styles.css
/* 

COLORS: #c3aa94 LIGHT BROWN
        #f1f1f1 OFF-WHITE
        #ae957f DARKER BROWN
        #554f49 OFF-BLACK
        #d99f55 ORANGEISH
        #eac591 SAND
*/

/* Base */

@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700&display=swap');

html {
  color: #f1f1f1;
  font-family: 'Lato', sans-serif;
  font-size: 16px;
  min-height: 100vh;
  min-width: 300px;
  overflow-x: hidden;
}

a {
  color: currentColor;
  cursor: pointer;
  text-decoration: none;
}

.mobile-menu {
  display: none;
}

/* Shared */

.section {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 4.875rem;
}

.header {
  font-size: 4rem;
}

.subheader {
  font-size: 2rem;
  font-weight: 100;
  letter-spacing: 0.0625rem;
}

.subheader--bold {
  font-weight: 600;
}

/* Specifics */

/* Navbar */

.nav-hero {
  background-image: linear-gradient(#ae957f, #c3aa94);
  min-height: 100vh;
}

.navbar {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding-top: 2.5rem;
}

.title {
  font-size: 2.25rem;
  font-weight: 600;
}

.nav-links {
  display: flex;
  justify-content: space-between;
}

.nav-item {
  font-size: 1rem;
  letter-spacing: 0.1rem;
  margin: 0 1.5rem;
  text-transform: uppercase;
}

.buy-button {
  border: 1px solid #f1f1f1;
  border-radius: 75095px;
  padding: 0.55rem 1rem;
}

/* Hero Section */

.hero {
  margin-top: 7rem;
}

.header-sub {
  font-weight: 100;
  margin-top: 1rem;
}

/* Feature 1 Section */

.feature1 {
  background-color: #fff;
  color: #554f49;
  min-height: 100vh;
}

.feature1-header {
  font-weight: 300;
  margin-bottom: 3.125rem;
}

.feature1-sub {
  font-weight: 300;
  line-height: 1.25;
}


/* Responsiveness */

/* Target small mobile */
@media screen and (max-width: 470px) {
  .nav-item {
    display: none;
  }

  .mobile-menu {
    cursor: pointer;
  }

  .mobile-bar-1,
  .mobile-bar-2,
  .mobile-bar-3 {
    width: 35px;
    height: 5px;
    background-color: #f1f1f1;
    margin: 6px 0;
  }

  .header {
    font-size: 1.3rem;
  }

  .header-sub {
    font-size: 0.666rem;
  }
}

/* Target large mobile */
@media screen and (min-width: 471px) and (max-width: 767px) {
  .nav-item {
    display: none;
  }

  .mobile-menu {
    cursor: pointer;
  }

  .mobile-bar-1,
  .mobile-bar-2,
  .mobile-bar-3 {
    width: 35px;
    height: 5px;
    background-color: #f1f1f1;
    margin: 6px 0;
  }

  .header {
    font-size: 2rem;
  }

  .header-sub {
    font-size: 1rem;
  }
}

/* Target tablets  */
@media screen and (min-width: 768px) and (max-width: 1023px) {
  .nav-item {
    display: none;
  }

  .mobile-menu {
    cursor: pointer;
  }

  .mobile-bar-1,
  .mobile-bar-2,
  .mobile-bar-3 {
    width: 35px;
    height: 5px;
    background-color: #f1f1f1;
    margin: 6px 0;
  }

  .header {
    font-size: 3rem;
  }

  .header-sub {
    font-size: 1.5rem;
  }
}

